# qr-tracker

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs
.github/workflows/: release.yml
assets/: main.css
src/: atomic_buf.rs  main.rs  sqlite.rs  video.rs
