[package]
name = "qr-tracker"
version = "0.1.0"
authors = ["Bennett Petzold <dansecob.dev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
const-str = "1.0.0"
dioxus = { version = "0.7.1", features = [] }
dioxus-desktop = "0.7.2"
futures = "0.3.31"
image = "0.25"
multiqueue = "0.3.2"
nokhwa = { version = "0.10", features = ["input-v4l"] }
rqrr = "0.10.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
