[package]
name = "qr-tracker"
version = "0.1.0"
authors = ["Bennett Petzold <dansecob.dev@gmail.com>"]
edition = "2024"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# GUI
dioxus = { version = "0.7", features = [] }
dioxus-desktop = "0.7"

# Communications between video and Dioxus app
async-channel = "2"
# Nice time utility
chrono = "0.4"
# Const string concat
const-str = "1"
# Access to async sleep
tokio = { version = "1.49", default-features = false, features = ["time"] }

# Video streaming and processing
image = "0.25"
nokhwa = { version = "0.10", features = ["input-native"] }
rqrr = "0.10"

# Database format
rusqlite = { version = "0.38", features = ["bundled"] }
# Prevents excessive yield_now spinning
atomic-wait = "1"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
overflow-checks = false
lto = true
panic = "abort"
codegen-units = 1
